--- a/game.html
+++ b/game.html
@@ -103,7 +103,7 @@
             <br>
             <input type="submit" value="ok" id="ok" onclick="ok()">
             <p></p> 
-            <a href=""><span id="rstrt" onclick="restartGame()">Új játék</span><i></i></a>
+            <span id="rstrt" onclick="restartGame()">Új játék</span><i></i>
         </div>
 
     </div>
